Se registra controlador para valoracion interpersonal
