# swagger/swagger.yml
@@ -701,6 +701,120 @@ paths:
           description: '{string} borrado exitoso!'
         "403":
           description: Id vacío
+  /ValoracionInterpersonal/:
+    get:
+      tags:
+      - ValoracionInterpersonal
+      description: consulta todos los registros de la tabla ValoracionInterpersonal
+      operationId: ValoracionInterpersonalController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: 'Filtro. Por ejemplo, col1: v1, col2: v2 ...'
+        type: string
+      - in: query
+        name: fields
+        description: Campos devueltos. Por ejemplo, col1, col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Campos ordenados por. Por ejemplo, Col1, col2 ...
+        type: string
+      - in: query
+        name: order
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
+        type: string
+      - in: query
+        name: offset
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ValoracionInterpersonal'
+        "403":
+          description: ""
+    post:
+      tags:
+      - ValoracionInterpersonal
+      description: agregar un registro en la tabla ValoracionInterpersonal
+      operationId: ValoracionInterpersonalController.Post
+      parameters:
+      - in: body
+        name: body
+        description: Cuerpo para el contenido de ValoracionInterpersonal
+        required: true
+        schema:
+          $ref: '#/definitions/models.ValoracionInterpersonal'
+      responses:
+        "201":
+          description: '{int} models.ValoracionInterpersonal'
+        "403":
+          description: Cuerpo Vacío
+  /ValoracionInterpersonal/{id}:
+    get:
+      tags:
+      - ValoracionInterpersonal
+      description: consultar un registro de la tabla ValoracionInterpersonal por su id
+      operationId: ValoracionInterpersonalController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: Id a consultar
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ValoracionInterpersonal'
+        "403":
+          description: :id está vacío
+    put:
+      tags:
+      - ValoracionInterpersonal
+      description: actualizar un registro de la tabla ValoracionInterpersonal
+      operationId: ValoracionInterpersonalController.Put
+      parameters:
+      - in: path
+        name: id
+        description: Id del registro a actualizar
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: Cuerpo para el contenido de ValoracionInterpersonal
+        required: true
+        schema:
+          $ref: '#/definitions/models.ValoracionInterpersonal'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ValoracionInterpersonal'
+        "403":
+          description: :id no es entero
+    delete:
+      tags:
+      - ValoracionInterpersonal
+      description: elimina un registro de la tabla ValoracionInterpersonal
+      operationId: ValoracionInterpersonalController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: Id del registro a eliminar
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} borrado exitoso!'
+        "403":
+          description: Id vacío
 definitions:
   "false":
     title: "false"
